# layout_switcher

./: README.md  SETUP.md  config.json  main.py  pyproject.toml  requirements.txt
keyd/: layout-switcher.conf
layout_switcher/: __init__.py  cli.py  config.py  doctor.py  executor.py  listener.py  processor.py  translator.py
scripts/: bootstrap.sh  bootstrap_arch.sh  bootstrap_ubuntu.sh  install_user.sh  reset_user_state.sh  uninstall_user.sh
systemd/: layout-switcher-ubuntu.service  layout-switcher.service  ydotoold-root.service  ydotoold.service
