[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layout-switcher"
version = "0.1.0"
description = "Wayland layout switcher daemon for fixing text typed in the wrong keyboard layout"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "evdev>=1.6.1",
]

[project.scripts]
layout-switcher = "layout_switcher.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["layout_switcher"]

[tool.setuptools.package-data]
layout_switcher = ["default_config.json"]
